<resources>
    <string name="app_name">KanbanProj</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Status task -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <string name="hit_edit_email">Digite seu e-mail</string>
    <string name="hit_edit_password">Digite sua senha</string>
    <string name="hit_edit_description">Informe sua nova tarefa</string>

    <!-- Generics -->
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="password_text">Senha</string>
    <string name="email_empty">Preencha seu e-mail!</string>
    <string name="email_text">E-mail</string>
    <string name="description_text">Descrição</string>
    <string name="status_text">Status</string>
    <string name="message_text">Message</string>


    <!-- Login Fragment -->
    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar Conta</string>
    <string name="text_button_recover_login_fragment">Recuperar Conta</string>

    <!-- Register Fragment -->
    <string name="email_empty_register_fragment">Preencha um e-mail válido.</string>
    <string name="password_empty_register_fragment">Preencha uma senha.</string>
    <string name="text_button_register_fragment">Criar Conta</string>
    <string name="text_title_toolbar_register_fragment">Criar Conta</string>

    <!-- Recover Account Fragment -->
    <string name="text_info_recover_account_fragment">Informe seu e-mail de cadastro para receber \n um link para alteração de senha.</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_recover_account_fragment">Enviar</string>

    <!-- Form Task Fragment -->
    <string name="description_empty_form_task_fragment">Preencha uma descrição.</string>
    <string name="text_title_toolbar_form_task_fragment">Nova Tarefa</string>
    <string name="text_button_form_task_fragment">Salvar</string>




</resources>