<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/LineatLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">

            <!-- width: comprimento -->
            <!-- height: largura -->

        <TextView
            android:id="@+id/TV_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/white"/>

            <!-- espaçamento externo: margin -->
            <!-- espaçamento interno: padding -->

        <EditText
            android:id="@+id/ED_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hit_edit_email"
            android:inputType="textEmailAddress"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/ED_senha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/hit_edit_password"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BT_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_login_fragment"
            style="@style/ButtonTheme"
            app:backgroundTint="@null"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_login_fragment"
                android:textAlignment="textStart"
                android:layout_weight="1"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btnRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_recover_login_fragment"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textColor="@color/white"/>


        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            tools:visibility="visible"
            android:visibility="invisible"/>





    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>